<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="app_name">Popular Movies</string>
    <string name="hello_world">Hello world!</string>
    <string name="action_settings">Settings</string>
    <string name="action_refresh">Refresh</string>
    <string name="action_share">Share</string>

    <string name="title_activity_main_activity2">MainActivity2Activity</string>
    <string name="title_activity_detail">DetailActivity</string>
    <string name="hello_detail">Hello detailed world!</string>
    <string name="location_key">location</string>
    <string name="default_location">32607</string>

    <string name="zip">Zip code</string>
    <string name="location_summary">Zip code for desired location</string>
    <string name="unit_key">unit_list</string>

    <string name="show_loc">Show Location</string>



    <!--  Strings for accesses to the API -->
    <string name="API_key"              translate="false">@string/API_key_secret</string>
    <string name="API_URL_base"         translate="false">https://api.themoviedb.org/3/</string>
    <string name="API_URL_image_base"   translate = "false">http://image.tmdb.org/t/p/</string>
    <string name="API_image_size_preferred" translate = "false">w185</string>
    <string name="API_image_size_detail"    translate = "false">w500</string>
    <string name="API_image_size_default"   translate = "false">original</string>
    <string name="API_discover"         translate="false">discover/movie</string>
    <string name="API_key_query"        translate="false">api_key</string>
    <string name="API_sort_query"       translate="false">sort_by</string>
    <string name="API_sort_by_pop"      translate="false">popularity.desc</string>
    <string name="API_sort_by_vote"     translate="false">vote_average.desc</string>


    <!--Strings for preferences -->
    <string name="PREF_sort_order_key">sort_by</string>
    <string name="PREF_sort_title">Sort list by:</string>
    <string name="PREF_option_popularity">Popularity</string>
    <string name="PREF_option_rating">Rating (all)</string>
    <string name="PREF_option_rating_50">Rating (at least a minimum number of votes)</string>
    <string-array name="PREF_sort_titles">
        <item>@string/PREF_option_popularity</item>
        <item>@string/PREF_option_rating</item>
        <item>@string/PREF_option_rating_50</item>
    </string-array>
    <string-array name="PREF_sort_choices">
        <item>@string/PREF_option_popularity</item>
        <item>@string/PREF_option_rating</item>
        <item>@string/PREF_option_rating_50</item>
    </string-array>
    <string name="PREF_minimum_votes_key">minimum_votes</string>
    <string name="PREF_minimum_votes_title">Minimum votes</string>
    <string name="PREF_minimum_votes_default">50</string>
    <string name="PREF_minimum_vote_summary">To ensure enough voters have selected a favorite, increase this.</string>

</resources>
